* 2017.03.16 - added support for VS2017 Community eddition (cl + clang)

* 2017.03.02 - added VIENNACL_CACHE_PATH to soft:lib.viennacl 
               (now can cache kernels - critical to cache Caffe OpenCL init time by 5x)

* 2017.02.27 - remove equal paths pointed by symbolic links when detecting installed soft

* 2017.02.09 - added "force_cmd_version_detection" and "soft_version_skip_add_target_file"
               to package meta (useful for ARM WA version detection even if taken from GIT)

* 2017.01.17 - added soft:lib.libdnn and moved soft:lib.tiny-dnn here

* 2017.01.08 - many fixes for Caffe deps for Windows/Android

* 2017.01.07 - various fixes for Caffe deps on Windows/Android

* 2017.01.03 - added '--safe' mode to check environment (will first search for CK packages and only then detecting soft)

* 2017.01.01 - added patch.exe (to support compiling Caffe on Windows)

* 2016.12.30 - added installation to env (ck install package:{name} --install_to_env
               or persistently: 'ck setup kernel --var.install_to_env="yes"'

* 2016.12.29 - automatically duplicating all deps with 'compiler' in the key
               to avoid mix ups of env by packages compiled with different compiler ...
             - added OS android19-arm-v7a-hard-neon, android19-arm-v7a-neon, android21-arm-v7a-hard-neon, android21-arm-v7a-neon

* 2016.12.28 - supporting duplication of deps (primerily to reset compiler vars to correct values at the end)

* 2016.12.27 - supporting LLVM from the new Android NDK (for Caffe)

* 2016.12.26 - updated wget for Windows (to download Caffe deps without SSL certificate)

* 2016.12.21 - major update to record package configuration during installation
               to be able to correctly re-register soft when env is cleaned ...
               It also allows to pre-record information about version 
               and other hints to CK in the CK-compatible third-party packages (bright future ;) ).
